--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,24 @@ cffi==1.15.1
 charset-normalizer==3.2.0
 cryptography==41.0.3
 defusedxml==0.7.1
+dj-database-url==2.1.0
 Django==4.0.7
 django-crispy-forms==1.14.0
 django-extensions==3.2.0
 django-filter==2.2.0
+django-heroku==0.3.1
 django-taggit==3.0.0
 djangorestframework==3.13.1
+gunicorn==21.2.0
 idna==3.4
 joblib==1.3.2
 Markdown==3.4.1
 mysqlclient==2.1.1
 numpy==1.25.2
 oauthlib==3.2.2
+packaging==23.1
 pandas==2.1.0
+psycopg2==2.9.7
 pycparser==2.21
 PyJWT==2.8.0
 pysqlite3-wheels==0.5.0
@@ -37,3 +42,4 @@ threadpoolctl==3.2.0
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
+whitenoise==6.5.0
